# world-simulator

./: .clippy.toml  .gitignore  AI_IMPLEMENTATION_SUMMARY.md  AI_SYSTEM_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  DEBUG_GATHERING_ISSUE.md  GATHERING_ISSUE_RESOLVED.md  INCREMENTAL_UPGRADE_PLAN.md  MOVEMENT_FIX_PROGRESS.md  PHASE_1_DETAILED.md  PROJECT_IMPROVEMENT_PLAN.md  RATIONAL_EVOLUTION_PLAN.md  README.md  RESOURCE_CONTENTION_FIX.md  RUST.md  TERMINAL_DEBUG.md  TICK_BASED_ARCHITECTURE.md  UPGRADE_PLAN.md  launch_simulator.sh  modular-simulation-engine.md  monitor_world.sh  monitor_world_tiered.sh  pack_test  run-simulation.sh  run_debug.sh  test_berries.sh  test_debug.html  test_harvest.sh  test_system.sh  visualize_world.py  visualize_world_ascii.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml
assets/: PACK_COMPARISON.md  resources.json
assets/packs/: DESIGN_NOTES.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DWARF_FORTRESS_FEATURES.md  IPC_IMPLEMENTATION_PLAN.md  PACK_FILE_STRUCTURE.md  PACK_SYSTEM_TASKS.md  PACK_SYSTEM_TECHNICAL.md  README.md  SIMULATION_LOGGING.md  SIM_VIEWER_USAGE.md  TICK_ACCUMULATOR_FIX.md  movement-pathfinding.md
docs/architecture/: atomic-resource-claiming.md  overview.md  (+1 more)
examples/: asset_pack_test.rs  goap_workers.rs  headless.rs  hybrid_ai.rs  pack_loader_test.rs
frontend/: index.html
scripts/: generate_simple_tileset.sh  generate_tileset.py
sim_viewer/: Cargo.toml
sim_viewer/src/: main.rs  pack_loader.rs
sim_viewer/tests/: integration_test.rs
templates/: README.md  create_project.sh
templates/basic_sim/: Cargo.toml  README.md  config.toml
templates/basic_sim/src/: components.rs  config.rs  main.rs  systems.rs
web-viewer/: index.html  server.py  viewer.html
world_sim_bevy_viz/: Cargo.toml
world_sim_core/: Cargo.toml
world_sim_core/examples/: test_world.rs
world_sim_core/src/: asset_manager.rs  engine.rs  lib.rs  plugin.rs  recipes.rs
world_sim_core/src/ai/: benchmarks.rs  coordinator.rs  lod_system.rs  mod.rs  parallel_processing.rs  priority_queue.rs  social_alerts.rs  squad_planning.rs  utility_actions.rs  utility_ai.rs  worker_ai.rs
world_sim_core/src/ai/scorers/: economic.rs  mod.rs  social.rs  survival.rs
world_sim_core/src/components/: buildings.rs  goap_actions.rs  goap_states.rs  inventory.rs  mod.rs  position.rs  resources.rs  tasks.rs  workers.rs
world_sim_core/src/data/: buildings.json  recipes.json  resources.json
world_sim_core/src/resources/: config.rs  mod.rs  world_state.rs
world_sim_core/src/scripting/: ai_scripts.rs  building_loader.rs  commands.rs  item_loader.rs  lua_api.rs  material_loader.rs  mod.rs  recipe_loader.rs  types.rs
world_sim_core/src/systems/: building_system.rs  goap_systems.rs  harvest_system.rs  mod.rs  movement_system.rs  path_sync_system.rs  recipe_system.rs
world_sim_core/src/tilemap/: layers.rs  mod.rs  pathfinding.rs  world_generation.rs  world_grid.rs
world_sim_core/src/world/: generator.rs  mod.rs
world_sim_core/tests/: building_system_test.rs  determinism_test.rs  engine_test.rs  event_emission_test.rs  harvest_system_test.rs  population_test.rs  recipe_system_test.rs  world_generation_test.rs
world_sim_interface/: Cargo.toml
world_sim_simple/: BEVY_ENTITILES_EXTRACTION.md  Cargo.toml  PHASE_3_5_HARVESTING.md  TASKS_BEVY_ENTITILES.md  TICK_ARCHITECTURE_PROGRESS.md  WORLD_SIM_CORE_LEGACY.md  viewer-reference.html  viewer.html
world_sim_simple/assets/packs/dev-world/: pack.lua  visual_definitions.lua
world_sim_simple/assets/packs/dev-world/data/entities/units/: peasant.lua
world_sim_simple/assets/packs/dev-world/data/items/food/: berries.lua
world_sim_simple/assets/packs/dev-world/data/resources/plants/: berry_bush.lua
world_sim_simple/saves/: autosave_0.json  autosave_1.json  autosave_2.json
world_sim_simple/src/: debug.rs  debug_cli.rs  ipc_output.rs  legacy_simulation.rs  main.rs  main.rs.bak  plugin.rs  simulation.rs  websocket.rs
world_sim_simple/src/ai/: behavior_state.rs  behaviors.rs  bevy_dogoap_impl.rs  big_brain_impl.rs  debug_logger.rs  goap_actions.rs  goap_bridge.rs  goap_planner.rs  goap_state_sync.rs  mod.rs  pathfinding.rs  shared_state.rs  simple_dogoap_test.rs  task_executor.rs  task_system.rs
world_sim_simple/src/buildings/: building_types.rs  construction.rs  mod.rs  placement.rs
world_sim_simple/src/components/: claimed_resource.rs  energy.rs  goap_states.rs  grid_position.rs  growth.rs  health.rs  mod.rs  movement_config.rs  movement_tracker.rs  name.rs  occupation.rs  peasant.rs  position.rs  resource.rs  storage.rs  unit.rs  unit_mind.rs  unit_needs_v2.rs  unit_state.rs  work_progress.rs  worker.rs
world_sim_simple/src/crafting/: crafting_station.rs  crafting_system.rs  mod.rs  recipes.rs
world_sim_simple/src/debug/: ai_monitor.rs
world_sim_simple/src/packs/: definitions.rs  loader.rs  loader_simple.rs  loader_v2.rs  mod.rs  registry.rs
world_sim_simple/src/performance/: metrics.rs  mod.rs  spatial_index.rs
world_sim_simple/src/plugins/: mod.rs  simulation.rs  world.rs
world_sim_simple/src/resources/: inventory.rs  item_system.rs  mod.rs  plant_growth.rs  resource_types.rs
world_sim_simple/src/save_load/: mod.rs  save_manager.rs  save_state.rs
world_sim_simple/src/scripting/: goap_loader.rs  lua_api.rs  mod.rs  recipe_scripts.rs  storage_loader.rs  tree_generation.rs
world_sim_simple/src/simulation/: events.rs  mod.rs  tick_config.rs  tick_debugger.rs  tick_manager.rs
world_sim_simple/src/spawning/: mod.rs
world_sim_simple/src/systems/: consumption.rs  entity_spawning.rs  food_gathering.rs  grid_occupation.rs  mod.rs  movement.rs  movement_effects.rs  needs_update.rs  needs_update_v2.rs  resource_growth.rs  resource_harvesting.rs  resource_regeneration.rs  storage.rs  unit_mind.rs  work.rs
world_sim_simple/src/tilemap/: biome.rs  chunk.rs  chunk_manager.rs  mod.rs  terrain.rs
world_sim_terminal/: Cargo.toml
(+158 files in other folders)
