[package]
name = "world_sim_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Bevy ECS - NO DefaultPlugins!
bevy = { version = "0.14", default-features = false, features = ["bevy_asset"] }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_reflect = "0.14"
bevy_time = "0.14"

# GOAP AI
dogoap = "0.5"
bevy_dogoap = "0.5"

# Utility AI
big-brain = "0.21"

# Interface
world_sim_interface = { path = "../world_sim_interface" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Random generation
rand = "0.8"

# Scripting support
bevy_mod_scripting = { version = "0.6", default-features = false }
bevy_mod_scripting_lua = { version = "0.6", default-features = false, features = ["lua54"] }

# Parallel processing
rayon = "1.10"
num_cpus = "1.16"
bevy_tasks = { workspace = true }
futures-lite = "2.3"

# SIMD optimizations
packed_simd_2 = { version = "0.3", optional = true }

[features]
default = []
simd = ["packed_simd_2"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
