[package]
name = "world_sim_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use consistent Bevy 0.14 versions
bevy = "0.14"
bevy_egui = "0.28"

# Interface
world_sim_interface = { path = "../world_sim_interface" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Random generation
rand = "0.8"

# WebSocket for frontend communication
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Terminal debugging
colored = "2.0"
env_logger = "0.11"
log = "0.4"