[package]
name = "world_sim_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use consistent Bevy 0.16 versions
bevy = "0.16"
bevy_egui = "0.36"

# Interface
world_sim_interface = { path = "../world_sim_interface" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Random generation
rand = "0.8"

# WebSocket for frontend communication
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Terminal debugging
colored = "2.0"
env_logger = "0.11"
log = "0.4"

# AI libraries for intelligent agent behavior
dogoap = "0.5"
bevy_dogoap = "0.5"
big-brain = { git = "https://github.com/zkat/big-brain", branch = "main" }  # Utility AI for reactive behaviors

# Scripting support
bevy_mod_scripting = { version = "0.15.1", default-features = false, features = ["lua54"] }

# Tilemap rendering and pathfinding
# bevy_entitiles = { git = "https://github.com/jeanfbrito/bevy_entitiles.git", branch = "bevy-0.16-migration", features = ["algorithm"] }