[package]
name = "world_sim_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
# Headless Bevy 0.16 configuration - minimal features for pure simulation
bevy = { version = "0.16", default-features = false, features = [
  "multi_threaded",
  "serialize",     # Required for save/load functionality
  "bevy_asset",    # Required for scripting system
  "file_watcher",  # For hot-reloading scripts
] }

# Interface
world_sim_interface = { path = "../world_sim_interface" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
thiserror = "1.0"

# Random generation
rand = "0.8"

# WebSocket for frontend communication
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

# Terminal debugging
colored = "2.0"
env_logger = "0.11"
log = "0.4"

# AI libraries for intelligent agent behavior
dogoap = "0.5"
bevy_dogoap = "0.5"
big-brain = { git = "https://github.com/zkat/big-brain", branch = "main" }  # Utility AI for reactive behaviors

# Scripting support
bevy_mod_scripting = { version = "0.15.1", default-features = false, features = ["lua54"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }  # For parsing Lua config files

# File system utilities
walkdir = "2.4"

# Tilemap rendering and pathfinding
# bevy_entitiles = { git = "https://github.com/jeanfbrito/bevy_entitiles.git", branch = "bevy-0.16-migration", features = ["algorithm"] }

[features]
default = ["websocket"]
websocket = ["tokio", "tokio-tungstenite", "futures-util", "uuid"]